--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Zlopez's blog
 
 # Short bio or description (displayed in the header)
-description: Software Engineer at Red Hat
+description: Software Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/6943409
